# AIDialogueNovel

./: .env.example  .gitignore  CLAUDE.md  README.md  build.py  main.py  pyproject.toml
backend/: server.py
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.tsx  types.ts
frontend/src/components/: DebugPanel.tsx  MessageBubble.tsx  SceneDivider.tsx
frontend/src/hooks/: useSSE.ts
frontend/src/stores/: chatStore.ts
src/: config.py
src/agents/: author.py  base.py  character.py  formatter.py  narrator.py
src/core/: checkpoint.py  context.py  emitter.py  engine.py  logger.py  message_queue.py  session.py  state_machine.py  trace.py  universe.py
src/core/phases/: __init__.py  _helpers.py  inner_loop.py  planning.py  summary.py
src/llm/: provider.py
src/storage/: frontmatter.py  history.py  state.py
stories/: README.md
stories/绝世唐门/: story.json
stories/绝世唐门/characters/伊莱克斯/: initial_state.md  profile.md
stories/绝世唐门/characters/和菜头/: initial_state.md  profile.md
stories/绝世唐门/characters/唐三/: initial_state.md  profile.md
stories/绝世唐门/characters/天梦冰蚕/: initial_state.md  profile.md
stories/绝世唐门/characters/徐三石/: initial_state.md  profile.md
stories/绝世唐门/outline/: 【10】日月帝国的阴影与橘子的初现.md  【11】归来的旅人与各自的思念.md  【1】史莱克的新生与魔法的初遇.md  【2】武魂的初次交锋与隐秘的锋芒.md  【3】贝贝学长的考验与唐门的影子.md  【4】斗魂场的试炼与冰帝的苏醒.md  【5】冰火两仪眼的秘密与雪帝的降临.md  【6】魂导系的邀请与和菜头的过去.md  【7】新生大赛与七怪的雏形.md  【8】极限单兵计划与成长的代价.md  【9】星斗大森林的内圈与凶兽的咆哮.md
stories/绝世唐门/worldview/: 原属大陆与日月帝国.md  史莱克学院.md  星斗大森林.md  武魂体系.md  武魂融合技.md  海神阁与宿老会.md  神界格局.md  魂导器体系.md  魂师等级体系.md  魂灵的真相.md
(+12 files in other folders)
